add img process

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ tfs/onnx
 .DS_Store
 yolo_onnx/best.onnx
 yolo_onnx/best.pt
+ocr_text_gen/**/*.png
+ocr_text_gen/**/*.jpg
+ocr_text_gen/resize_output/
